# spgci-python

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
spgci/: __init__.py  agriculture_and_food.py  america_gas.py  americas_gas.py  apac_gas.py  api_client.py  arbflow.py  auth.py  calculator.py  chemical_assets.py  chemical_outages.py  chemicals.py  chemicals_price_forecast.py  chemicals_supply_demand.py  clean_energy_technology.py  config.py  crude_supply_risk.py  epf.py  eu_gas_analytics.py  eu_power.py  eugashubbalances.py  ewindow_md.py  exceptions.py  forward_curves.py  fuels_and_refining.py  gas_long_term_supply_and_demand.py  giem.py  insights.py  integrated_energy_scenarios.py  lng_analytics.py  lng_global.py  lng_global_plus.py  lng_market_fundamentals.py  lng_netbacks.py  lng_outages.py  market_data.py  na_gas.py  oil_demand.py  oil_ngl_analytics.py  refined_product_demand.py  (+8 more)
tests/: test_arbflow.py  test_auth.py  test_client.py  test_curves.py  test_epf.py  test_ewmd.py  test_giem.py  test_insights.py  test_lng_tenders.py  test_mdd.py  test_na_gas.py  test_od.py  test_structured_heards.py  test_symbols.py  test_utils.py  test_weather.py  test_wos.py  test_wrd.py
